<resources>
    <string name="app_name">FantasticStories</string>
    <string name="look_through_issues">Look through  issues</string>
    <string name="look_for_a_story">Look for a story</string>
    <string name="my_reviews_textview">My reviews</string>
    <string name="more_button">more...</string>
    <string name="add_review_button">Add a review</string>
    <string name="save_button">save</string>
    <string name="quit_button">quit</string>
    <string name="your_review_hint">Your review</string>
    <string name="your_review_title_hint">Your review title </string>
    <string name="rating_text_view">Rate the story:</string>
    <string-array name="main_spinner_array">
        <item>recently written</item>
        <item>oldest</item>
        <item>top rated story</item>
        <item>worst rated story</item>
        <item>recent issue</item>
        <item>oldest issue</item>
    </string-array>
    <string-array name="year_spinner_array">
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
    </string-array>
    <string-array name="rating_spinner_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
